<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AnimexxActivity!</string>
    <string name="app_name">Animexx</string>
    <string name="Anmelden">Anmelden</string>
    <string name="OAuthStatus">OAuth Status</string>
    <string name="Betreff">Betreff:</string>
    <string name="ENSAn">An:</string>
    <string name="Nachricht">Nachricht:</string>
    <string name="Send">Absenden</string>
    <string name="Answer">Antworten</string>
    <string name="leer">" "</string>
    <string name="Von">Von:</string>
    <string name="line">"  "</string>
    <string name="enspermsissionl">ENS Benachrichtigungen senden</string>
    <string name="enspermission">Kann direkt ENS Benachrichtigungen an dich, über die Animexx App, senden.</string>
    <string name="about">App by dasfuu</string>
    <string name="placeholder"></string>
    <string name="Name">Name:</string>
    <string name="Alter">Alter:</string>
    <string name="Ort">Ort:</string>
    <string name="Geburtstag">Geburtstag:</string>
    <string name="EMail">E-Mail:</string>
    <string name="Web">Website:</string>
    <string name="Guestbook">Gästebuch</string>
    <string name="SendENS">ENS senden!</string>
    <string name="SettingsENSTon">Sound nur bei ENS</string>
    <string name="SettingsPushLabel">"Push: "</string>
    <string name="SettingsSound">Ton: </string>
    <string name="SettingsSoundENS">"ENS Ton: "</string>
    <string name="empty"></string>
    <string name="feedback">Feedback</string>
    <string name="filtet">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_single_image">SingleImage</string>
    <string name="zitat">Zitat</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_overview">Übersicht</string>
    <string name="title_activity_event_edit_note">Notiz</string>
    <string name="action_settings">Settings</string>
    <string name="new_note">Neue Notiz...</string>
    <string name="title_activity_home_kontakt">HomeKontaktActivity</string>
    <string name="title_activity_home_kontakt_detail_fragment">HomeKontaktDetailFragment</string>
    <string name="activity_share_image_ens">Neue ENS</string>
    <string name="activity_share_image_microblog">Neuer Microblog</string>
    <string name="activity_share_image_browser">Im Browser</string>
    <string name="fragment_microblog_send">Senden</string>
    <string name="title_new_microblog">Microblog</string>
    <string name="home_comment_send">Absenden</string>
    <string name="title_activity_home_kontakt_big">HomeKontaktBigActivity</string>
    <string name="title_activity_overview_card">Dashboard</string>
    <string name="title_activity_fanart">Fanart</string>
    <string name="title_activity_fanart_kommentare">Kommentare</string>
    <string name="title_activity_rpgnew_post">RPGNewPost</string>
    <string name="rpg_new_send">Absenden</string>
    <string name="title_activity_karotaler">KarotalerActivity</string>
    <string name="title_activity_user_card_steckbrief">UserCardSteckbrief</string>
    <string name="title_activity_event_view_card_detail">EventViewCardDetail</string>
    <string name="title_activity_event_view_page">EventViewPage</string>
    <string name="title_activity_manga_view_list">MangaViewList</string>
    <string name="title_activity_manga_band_view_list">MangaBandViewList</string>

</resources>