<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <de.meisterfuu.animexx.other.SlideMenu
        android:id="@+id/slideMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TxBetreff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Betreff"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TxVon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Von"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TxENS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nachricht" />

            <WebView
                android:id="@+id/WebENS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/BtAnswer"
                    style="@style/AnimexxStyle"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Answer" />

                <CheckBox
                    android:id="@+id/zitat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zitat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>