<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeKontaktDetailFragment" >

    <ImageView
        android:id="@+id/share_image_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:scaleType="centerCrop"
        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />

    <TextView
        android:id="@+id/share_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/share_image_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#80000000"
        android:paddingLeft="4dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/share_image_title"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/share_image_URL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/share_image_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/share_image_ENS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/activity_share_image_ens" />

        <Button
            android:id="@+id/share_image_shortblog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/activity_share_image_microblog" />

        <Button
            android:id="@+id/share_image_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/activity_share_image_browser" />

    </LinearLayout>

</RelativeLayout>
